# washbot_ros2

./: .gitignore  README.md  debug.sh
docs/: base_serial_protocol.md
scripts/: test_base_driver_fake_mcu.sh  test_base_driver_real_mcu.sh
src/carwash_sim/: CMakeLists.txt  package.xml  test_stl.sdf
src/carwash_sim/worlds/: carwash.sdf  carwash_map.sdf  test_stl.sdf
src/washbot_base_driver/: CMakeLists.txt  README.md  package.xml
src/washbot_base_driver/config/: base_driver.yaml
src/washbot_base_driver/launch/: base_driver.launch.py
src/washbot_base_driver/src/: base_driver_node.cpp
src/washbot_decision/: package.xml  setup.cfg  setup.py
src/washbot_decision/config/: wash_task.yaml
src/washbot_decision/launch/: rect_patrol.launch.py
src/washbot_decision/washbot_decision/: center_scan_odom_node.py  rect_patrol_node.py
src/washbot_description/: CMakeLists.txt  package.xml
src/washbot_description/config/: bridge.yaml
src/washbot_description/launch/: washbot_rtabmap_fusion.launch.py  washbot_rtabmap_rgbd.launch.py  washbot_scan_test.launch.py
src/washbot_description/urdf/: base_link.STL  washbot.urdf.xacro
tools/: fake_mcu.py
