<?xml version="1.0"?>
<package format="3">
  <name>washbot_decision</name>
  <version>0.0.1</version>
  <description>WashBot decision layer for rectangular patrol.</description>

  <maintainer email="yuandong@example.com">yuandong</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
